tests/compile_fail/unsigned_invalid_type/source.c
int main() {
  unsigned void value;
  return 0;
}
